DP-8847 Fixes from testing; updated image-promo.json to use truncation in the style guide

--- a/assets/scss/02-molecules/_image-promo.scss
+++ b/assets/scss/02-molecules/_image-promo.scss
@@ -116,6 +116,10 @@ $image-promo-bp-x-large-min: "min-width: 1160px";
         width: auto;
         margin: auto;
       }
+
+      p.ma__visually-hidden {
+        margin: auto auto 1.75rem;
+      }
     }
 
     &.ma__collapsed {
